--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="insset.com.pizzanananas" >
+    package="insset.com.pizzanananas">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,8 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".HomePage" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".HomePage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,9 +18,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".OrdersList" >
-        </activity>
-        <activity android:name=".ClientPage"></activity>
+        <activity android:name=".OrdersList"></activity>
+        <activity android:name=".ClientPage" />
+        <activity android:name=".PizzasList"></activity>
     </application>
 
 </manifest>
