--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'org.twitter4j:twitter4j-core:4.0.2'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
