--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'org.twitter4j:twitter4j-core:4.0.2'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile group:'com.librato.metrics', name:'librato-java', version:'1.0.13'
 }
