--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -26,4 +37,7 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'org.twitter4j:twitter4j-core:4.0.2'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.segment.analytics.android:analytics:4.+'
+    compile group:'com.librato.metrics', name:'librato-java', version:'1.0.13'
+    compile 'commons-codec:commons-codec:1.3'
 }
